[package]
name = "fixed_vec"
version = "0.1.0"
authors = ["Matthew Torrence <matt@torrencefamily.net>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "comparison_benchmark"
harness = false

[dependencies]
derivative = "2.1.1"
type_name_value = { path = "../type_name_value", version = "0.1.0" }
