[package]
name = "fixed_vec"
version = "0.1.0"
authors = ["Matthew Torrence <matt@torrencefamily.net>"]
edition = "2018"
description = "Ghosts of Departed Proofs for checking valid indices of Vec's once"
homepage = "https://github.com/Torrencem/fixed_vec"
documentation = "https://docs.rs/fixed_vec"
repository = "https://github.com/Torrencem/fixed_vec"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "comparison_benchmark"
harness = false

[dependencies]
derivative = "2.1.1"
type_name_value = "0.1.0"
